--- a/index.html
+++ b/index.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-
 <head>
   <meta charset="utf-8">
   <title>Neil's Portfolio</title>
+  <meta charset="UTF-8" />
+   <meta name="referrer" content="origin">
+   <meta name="description" content="Main Portfolio page">
+   <meta name="author" content="Neil Moras">
+   <meta http-equiv="x-ua-compatible" content="IE=edge">
+  <link rel="icon" type="image/png" href="image/temp-logo.png">
   <meta name="viewport" content="width=device-width">
   <script src="https://kit.fontawesome.com/0b4300e3e5.js" crossorigin="anonymous"></script>
   <script src="js/index.js"></script>
   <link rel="stylesheet" href="css/styles.min.css">
 </head>
-
 <body>
   <header id="header">
     <div class="text-wrapper">
@@ -30,7 +34,6 @@
           <i id="ham-btn-cta" class="fas fa-bars"></i>
         </div>
       </div>
-
     </div>
   </header>
   <!-- MAIN BANNER -->
@@ -40,11 +43,8 @@
         <div class="line"></div>
         <div class="line"></div>
         <div class="line"></div>
-        <div class="line"></div>
-        <div class="line"></div>
       </div>
       <div class="circle">
-
       </div>
       <div class="main-flex">
         <div class="image-self">
@@ -56,14 +56,13 @@
           <button class="btn"><i class="fa fa-download"></i>Resume</button>
         </div>
       </div>
-
       <div class="social-icon">
         <a  aria-label="linkedin icon" rel="noreferrer" href="https://www.linkedin.com/in/neil-moras-577a96a5/" target="_blank"><i class="fab icon fa-linkedin-in"></i></a>
         <a aria-label="email icon" href="#contact-section"><i class="far icon fa-envelope"></i></a>
         <a rel="github icon" href="https://github.com/NeilMoras" target="_blank"><i class="fab fa-github"></i></a>
       </div>
       <div class="arrow">
-        <a href="#skills-section"><i class="fas fa-chevron-circle-down"></i></a>
+        <a href="#about-section"><i class="fas fa-chevron-circle-down"></i></a>
       </div>
     </div>
   </main>
@@ -73,9 +72,9 @@
       <div class="feature-heading">
         <h2>About Me</h2>
       </div>
-      <div class="main-flex">
-        <div class="image-self">
-          <img src="image/neil-image.png" alt="Photo of Neil Moras">
+      <div class="about-flex">
+        <div class="about-image-self">
+          <img class="about-img" src="image/about-me-self-image.jpg" alt="Photo of Neil Moras">
         </div>
         <div class="about-head">
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
@@ -90,7 +89,6 @@
         <h2>Skills & Experience</h2>
       </div>
       <div class="skill-flex">
-
         <div class="front-container">
           <h3>Front-end</h3>
           <i class="fas fa-code"></i>
@@ -116,7 +114,6 @@
       </div>
     </div>
   </section>
-
   <!-- FEATURE SECTION -->
   <section id="features-section">
     <div class="text-wrapper">
@@ -136,7 +133,6 @@
           </div>
         </div>
       </div>
-
       <div class="grid-flex">
         <div class="col col-image">
           <img src="image/artboardimage.jpg" alt="">
@@ -146,27 +142,21 @@
             <h3>Dragon Ball</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
               Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
           </div>
         </div>
       </div>
-
       <div class="grid-flex">
         <div class="col col-image" >
             <img src="image/artboardimage.jpg" alt="">
         </div>
-
         <div class="col col-text">
           <div class="aligner-item">
             <h3>Dragon Ball</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
               Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-            </p>
           </div>
         </div>
       </div>
-
-
       <div class="grid-flex">
         <div class="col col-image">
         <img src="image/artboardimage.jpg" alt="">
@@ -183,7 +173,6 @@
         <div class="col col-image">
             <img src="image/artboardimage.jpg" alt="">
         </div>
-
         <div class="col col-text">
           <div class="aligner-item">
             <h3>Dragon Ball</h3>
@@ -202,23 +191,16 @@
       </div>
       <div class="wrap">
         <div class="contact-frame">
-          <!-- <div class="contact-info"> -->
           <h3 class="hidden">Contact information</h3>
           <p><span class="contact-name-bold">Neil Moras</span>
             <span>Toronto,</span>
             <span>Ontario, Canada.</span>
             <span>Email: neilmoras@gmail.com</span>
           </p>
-          <!-- </div> -->
-          <!-- <div class="google-frame"> -->
           <iframe
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d184552.57289716916!2d-79.49891565188125!3d43.71815566221442!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89d4cb90d7c63ba5%3A0x323555502ab4c477!2sToronto%2C%20ON!5e0!3m2!1sen!2sca!4v1616985533025!5m2!1sen!2sca"
             width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-          <!-- </div> -->
         </div>
-        <!-- <div class="contact"> -->
-
-
         <div class="container">
           <div class="text">
             <p>Hello! I’m interested in open opportunies to showcase my skills and learning. If you happen
@@ -227,47 +209,40 @@
           <form action="#">
             <div class="form-row">
               <div class="input-data">
-                <input type="text" required>
-                <div class="underline"></div>
-                <label for="">First Name</label>
+                <input type="text"  id="fullname"  name="fullname" required>
+                <label for="fullname">Name</label>
               </div>
               <div class="input-data row-block">
-                <input type="email" required>
-                <div class="underline"></div>
-                <label for="">Email</label>
+                <input type="email" id="email"  name="email" required>
+                <label for="email">Email</label>
               </div>
             </div>
             <div class="form-row">
               <div class="input-data">
-                <input type="text" required>
-                <div class="underline"></div>
-                <label for="">Subject</label>
+                <input type="text" id="subject" name="subject" required>
+                <label for="subject">Subject</label>
               </div>
             </div>
             <div class="form-row">
               <div class="input-data textarea">
-                <textarea rows="8" cols="80" required></textarea>
-
-                <div class="underline"></div>
-                <label for="">Message</label>
+                <textarea rows="8" cols="80" id="message" name="message" required></textarea>
+                <label for="message">Message</label>
               </div>
             </div>
             <div class="form-btn">
               <div class="input-data">
-                <input type="submit" value="submit">
+                <input type="submit" name="submitForm" value="submit">
               </div>
             </div>
-        </div>
         </form>
-
-
-      </div>
-      <div class="icons">
-        <a rel="noreferrer" href="https://www.linkedin.com/in/neil-moras-577a96a5/" target="_blank"><i class="fab icon fa-linkedin-in"></i></a>
-        <a href="#contact-section"><i class="far icon fa-envelope"></i></a>
-        <a rel="noreferrer" href="https://github.com/NeilMoras" target="_blank"><i class="fab fa-github"></i></a>
       </div>
     </div>
+    <div class="icons">
+      <a rel="noreferrer" href="https://www.linkedin.com/in/neil-moras-577a96a5/" target="_blank"><i class="fab icon fa-linkedin-in"></i></a>
+      <a href="#contact-section"><i class="far icon fa-envelope"></i></a>
+      <a rel="noreferrer" href="https://github.com/NeilMoras" target="_blank"><i class="fab fa-github"></i></a>
+    </div>
+  </div>
   </section>
   <footer id="footer">
     <div class="text-wrapper">
@@ -288,8 +263,6 @@
       </div>
     </div>
   </footer>
-
-
 </body>
 
 </html>
