updated background image

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       </div>
       <div class="main-flex">
         <div class="image-self">
-          <img src="image/neil-image.png" alt="Photo of Neil Moras">
+          <img src="image/neil-image.png" alt="Profile picture of Neil Moras">
         </div>
         <div class="intro-head">
           <h1><span>Hi,</span> <span class="block name-span">I'm Neil</span></h1>
@@ -126,10 +126,11 @@
         </div>
         <div class="col col-text">
           <div class="aligner-item">
-            <h3>Dragon Ball</h3>
+            <h3>Movies + Soundtrack API App</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
               Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-              <a href="#">Github</a>
+            <a href="#">Github</a>
+            <a href="#">Live</a>
           </div>
         </div>
       </div>
@@ -139,9 +140,11 @@
         </div>
         <div class="col col-text col-left">
           <div class="aligner-item">
-            <h3>Dragon Ball</h3>
+            <h3>Dragon Ball Semi-Interactive Animation</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
               Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+              <a href="#">Github</a>
+              <a href="#">Live</a>
           </div>
         </div>
       </div>
@@ -154,6 +157,8 @@
             <h3>Dragon Ball</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
               Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+              <a href="#">Github</a>
+              <a href="#">Live</a>
           </div>
         </div>
       </div>
@@ -166,6 +171,8 @@
             <h3>Dragon Ball</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
               Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+              <a href="#">Github</a>
+              <a href="#">Live</a>
           </div>
         </div>
       </div>
@@ -178,6 +185,8 @@
             <h3>Dragon Ball</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
               Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+              <a href="#">Github</a>
+              <a href="#">Live</a>
           </div>
         </div>
       </div>
