added project names

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
         </div>
         <div class="col col-text">
           <div class="aligner-item">
-            <h3>Dragon Ball</h3>
+            <h3>Bets R Us Movie Betting Website</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
               Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
               <a href="#">Github</a>
@@ -168,7 +168,7 @@
         </div>
         <div class="col col-text col-left">
           <div class="aligner-item">
-            <h3>Dragon Ball</h3>
+            <h3>Ticketing System</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
               Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
               <a href="#">Github</a>
@@ -182,7 +182,21 @@
         </div>
         <div class="col col-text">
           <div class="aligner-item">
-            <h3>Dragon Ball</h3>
+            <h3>Fighter Jets World</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+              Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+              <a href="#">Github</a>
+              <a href="#">Live</a>
+          </div>
+        </div>
+      </div>
+      <div class="grid-flex">
+        <div class="col col-image">
+            <img src="image/artboardimage.jpg" alt="">
+        </div>
+        <div class="col col-text col-left">
+          <div class="aligner-item">
+            <h3>Code Snippet Sticky List</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
               Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
               <a href="#">Github</a>
