--- a/index.html
+++ b/index.html
@@ -53,16 +53,16 @@
         <div class="intro-head">
           <h1><span>Hi,</span> <span class="block name-span">I'm Neil</span></h1>
           <p><span>a</span> <span>web developer</span> <span>based</span> <span>in</span><span class="block">Toronto, Canada</span></p>
-          <button class="btn"><i class="fa fa-download"></i>Resume</button>
+          <a href="resume/neil-resume.pdf" class="btn" download><i class="fa fa-download"></i><span class="hidden">Download</span>Resume</a>
         </div>
       </div>
       <div class="social-icon">
-        <a  aria-label="linkedin icon" rel="noreferrer" href="https://www.linkedin.com/in/neil-moras-577a96a5/" target="_blank"><i class="fab icon fa-linkedin-in"></i></a>
-        <a aria-label="email icon" href="#contact-section"><i class="far icon fa-envelope"></i></a>
-        <a rel="github icon" href="https://github.com/NeilMoras" target="_blank"><i class="fab fa-github"></i></a>
+        <a  aria-label="linkedin icon" rel="noreferrer" href="https://www.linkedin.com/in/neil-moras-577a96a5/" target="_blank"><span class="hidden">linkedin link</span><i class="fab icon fa-linkedin-in"></i></a>
+        <a aria-label="email icon" rel="noreferrer" href="#contact-section"><span class="hidden">Email link</span><i class="far icon fa-envelope"></i></a>
+        <a aria-label="github icon"  rel="noreferrer" href="https://github.com/NeilMoras" target="_blank"><span class="hidden">Githublink icon</span><i class="fab fa-github"></i></a>
       </div>
       <div class="arrow">
-        <a href="#about-section"><i class="fas fa-chevron-circle-down"></i></a>
+        <a href="#about-section"><span class="hidden">Down Arrow</span><i class="fas fa-chevron-circle-down"></i></a>
       </div>
     </div>
   </main>
@@ -82,6 +82,9 @@
       </div>
     </div>
   </section>
+  <div id="code-banner">
+
+  </div>
   <!-- SKILLS SECTION -->
   <section id="skills-section">
     <div class="text-wrapper">
@@ -110,9 +113,28 @@
             <li><i aria-hidden="true" class="fas fa-check-circle"></i>Testing/Debugging</li>
           </ul>
         </div>
+      </div>
+        </div>
+      <div class="skill-language-div">
+          <div class="text-wrapper">
+        <h3>Languages</h3>
+        <div class="language-flex">
+            <img src="image/html.png" alt="image of html">
+            <img src="image/css.png" alt="image of css">
+            <img src="image/js.png" alt="image of javascript">
+            <img src="image/php.png" alt="image of php">
+            <img src="image/php-mysql.png" alt="image of php with my sql">
+            <img src="image/jqeury.png" alt="image of jquery">
+            <img src="image/vue.js.png" alt="image of vue.js">
+            <img src="image/c-sharp.png" alt="image of c-sharp">
+            <img src="image/asp.net.jpeg" alt="image of asp.net">
+            <img src="image/react-native.png" alt="image of react-native">
+              <img src="image/react.png" alt="image of react.js">
+        </div>
 
       </div>
     </div>
+
   </section>
   <!-- FEATURE SECTION -->
   <section id="features-section">
@@ -220,7 +242,7 @@
             <span>Ontario, Canada.</span>
             <span>Email: neilmoras@gmail.com</span>
           </p>
-          <iframe
+          <iframe title="Map Location of Toronto, Canada"
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d184552.57289716916!2d-79.49891565188125!3d43.71815566221442!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89d4cb90d7c63ba5%3A0x323555502ab4c477!2sToronto%2C%20ON!5e0!3m2!1sen!2sca!4v1616985533025!5m2!1sen!2sca"
             width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
         </div>
@@ -261,9 +283,9 @@
       </div>
     </div>
     <div class="icons">
-      <a rel="noreferrer" href="https://www.linkedin.com/in/neil-moras-577a96a5/" target="_blank"><i class="fab icon fa-linkedin-in"></i></a>
-      <a href="#contact-section"><i class="far icon fa-envelope"></i></a>
-      <a rel="noreferrer" href="https://github.com/NeilMoras" target="_blank"><i class="fab fa-github"></i></a>
+      <a rel="noreferrer" href="https://www.linkedin.com/in/neil-moras-577a96a5/" target="_blank"><span class="hidden">linkedin icon</span><i class="fab icon fa-linkedin-in"></i></a>
+      <a href="#contact-section"><span class="hidden">Email link</span><i class="far icon fa-envelope"></i></a>
+      <a rel="noreferrer" href="https://github.com/NeilMoras" target="_blank"><span class="hidden">Githublink icon</span><i class="fab fa-github"></i></a>
     </div>
   </div>
   </section>
